<resources>
    <string name="app_name">Desafio Integrador Firebase</string>
    <string name="description_game_thumbnail">game thumbnail</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="add_game">Add game</string>
    <string name="name">Name</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="back_button">Back button</string>
    <string name="edit_button">Edit button</string>
    <string name="release_date">Release date:</string>
    <!-- VALIDATION MESSAGES -->
    <string name="invalid_email">E-mail invalid (pattern doesn\'t match)</string>
    <string name="invalid_password_minimum">Password invalid (value is too short)</string>
    <string name="invalid_password_confirmation">Password invalid (confirmation is different)</string>
    <string name="invalid_name_minimum">Name invalid (value is too short)</string>
    <string name="invalid_release_date_minimum">Release date invalid (value is too short)</string>
    <string name="invalid_description_minimum">Description invalid (value is too short)</string>
    <string name="my_game_list">my_game[]</string>
    <string name="created_by">created by Lincoln</string>
    <string name="plase_wait">Please wait...</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="created_at">Created at</string>
    <string name="select_picture">Select a picture from gallery</string>
</resources>