<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_parent_margin"
            app:cardCornerRadius="@dimen/regular_card_border_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lavLoginAnimation"
                    android:layout_width="@dimen/animation_size"
                    android:layout_height="@dimen/animation_size"
                    android:layout_margin="@dimen/login_content_margin"
                    android:scaleType="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.45"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/google_play_games_lottie"
                    app:lottie_scale="0.3" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLoginEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/login_content_margin"
                    android:hint="@string/e_mail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lavLoginAnimation">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLoginPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_content_margin"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="@id/tilLoginEmail"
                    app:layout_constraintStart_toStartOf="@id/tilLoginEmail"
                    app:layout_constraintTop_toBottomOf="@id/tilLoginEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cbLoginRemember"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_checkbox_margin"
                    android:checked="true"
                    android:text="@string/remember"
                    app:layout_constraintEnd_toEndOf="@id/tilLoginPassword"
                    app:layout_constraintStart_toStartOf="@id/tilLoginPassword"
                    app:layout_constraintTop_toBottomOf="@id/tilLoginPassword" />

                <Button
                    android:id="@+id/btLoginSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_content_margin"
                    android:text="@string/log_in"
                    app:layout_constraintEnd_toEndOf="@id/cbLoginRemember"
                    app:layout_constraintStart_toStartOf="@id/cbLoginRemember"
                    app:layout_constraintTop_toBottomOf="@id/cbLoginRemember" />

                <TextView
                    android:id="@+id/tvLoginCreateAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_content_margin"
                    android:layout_marginBottom="@dimen/login_card_margin_large"
                    android:text="@string/create_account"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/btLoginSubmit"
                    app:layout_constraintStart_toStartOf="@id/btLoginSubmit"
                    app:layout_constraintTop_toBottomOf="@id/btLoginSubmit" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>