<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:fillViewport="true"
    tools:context=".view.activity.GameEditorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabGameEditorPickImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/select_picture"
            android:src="@drawable/ic_pic"
            app:layout_constraintBottom_toTopOf="@id/cvGamerEditorForm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cvGamerEditorForm" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civGameEditorThumbnail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/fabGameEditorPickImage"
            app:layout_constraintEnd_toEndOf="@id/fabGameEditorPickImage"
            app:layout_constraintStart_toStartOf="@id/fabGameEditorPickImage"
            app:layout_constraintTop_toTopOf="@id/fabGameEditorPickImage" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvGamerEditorForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_parent_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilGameEditorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/regular_parent_margin"
                    android:layout_marginTop="@dimen/game_editor_card_padding_large"
                    android:layout_marginEnd="@dimen/regular_parent_margin"
                    android:layout_marginBottom="@dimen/regular_parent_margin"
                    android:hint="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilGameEditorCreatedAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/regular_parent_margin"
                    android:hint="@string/created_at"
                    app:layout_constraintEnd_toEndOf="@id/tilGameEditorName"
                    app:layout_constraintStart_toStartOf="@id/tilGameEditorName"
                    app:layout_constraintTop_toBottomOf="@id/tilGameEditorName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="4" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilGameEditorDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/regular_parent_margin"
                    android:hint="@string/description"
                    app:layout_constraintEnd_toEndOf="@id/tilGameEditorCreatedAt"
                    app:layout_constraintStart_toStartOf="@id/tilGameEditorCreatedAt"
                    app:layout_constraintTop_toBottomOf="@id/tilGameEditorCreatedAt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/description_text_view_height" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btGameEditorSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/regular_parent_margin"
                    android:text="@string/submit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilGameEditorDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>